--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <!--Portfolio item 4-->
         <li class="portfolio-item">
             <img class="portfolio-images" src="./images/img-4.jpg" alt="Taxi" width="360"/>
-            <div class="pportfolio-card-list">
+            <div class="portfolio-card-list">
             <h3 class="portfolio-subtitle">Taxi Service</h3>
             <p class="portfolio-text">Marketing</p>
         </div>
@@ -198,15 +198,15 @@
 
 <!--Footer-->
 
-<div class="container container-footer">
 <footer class="footer">
+    <div class="container container-footer">
 <!--Logo-->
 <a class="logo" href="./index.html">Web<span class="logo-footer-colored">Studio</span></a>
 
 <p class="footer-text">
     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 </p>
-</footer>
-</div>  
+</div> 
+</footer> 
 </body>
 </html>
