--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <!--Header-->
 <header class="header">
-    <div class="container-header">
+    <div class=" container container-header">
     <nav class="nav-header">
 <!--Logo-->
     <a class="logo" href="./index.html">Web<span class="logo-colored">Studio</span></a>
@@ -51,8 +51,8 @@
 <!--Main-->
 <main>
 <!-- Section 1 Title-->
-<section>
-    <div class="container-title">
+<section class="section-title">
+    <div class=" container container-title">
     <h1 class="main-title">Effective Solutions for Your Business</h1>
 <button type="button" class="title-btn">Order Service</button>
 </div>
@@ -61,7 +61,7 @@
 
 <!--Section 2 Features-->
 
-    <section>
+    <section class="section-features">
     <div class="container container-features">
     <!-------<h2 class="features-title title">Features</h2>--->
 <!--Liste Feature-->
@@ -108,26 +108,34 @@
 <!--team member 1-->
         <li class="team-item">
     <img class="team-images" src="./images/team-member-1.jpg" alt="Picture of Mark Guerrero" width="264" height="260"/>
+    <div class="team-card">
     <h3 class="team-subtitle">Mark Guerrero</h3>
-    <p class="team-text">Product Designer</p>        
+    <p class="team-text">Product Designer</p> 
+</div>       
         </li>
 <!--team member 2-->
         <li class="team-item">
     <img class="team-images" src="./images/team-member-2.jpg" alt="Picture of Tom Ford" width="264" height="260"/>
+    <div class="team-card">
     <h3 class="team-subtitle">Tom Ford</h3>
-    <p class="team-text">Frontend Developer</p>    
+    <p class="team-text">Frontend Developer</p> 
+</div>   
         </li>
 <!--team member 3-->
         <li class="team-item">
     <img class="team-images" src="./images/team-member-3.jpg" alt="Picture of Camila Garcia" width="264" height="260"/>
+    <div class="team-card">
     <h3 class="team-subtitle">Camila Garcia</h3>
     <p class="team-text">Marketing</p> 
+</div>
         </li>
 <!--team member 4-->
         <li class="team-item">
     <img class="team-images" src="./images/team-member-4.jpg" alt="Picture of Daniel Wilson" width="264" height="260"/>
+    <div class="team-card">
     <h3 class="team-subtitle">Daniel Wilson</h3>
     <p class="team-text">UI Designer</p> 
+</div>
         </li>
     </ul>
 </div>
@@ -135,7 +143,7 @@
 
 <!--Section 4 Our portfolio-->
 
-<section>
+<section class="section-portfolio">
     <div class="container container-portfolio">
     <h2 class="portfolio-title title">Our Portfolio</h2>
     
