add changes index.html file

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <section class="section-features">
     <div class="container container-features">
-    <h2  class="visually-hidden" class="features-title title">Features</h2>
+    <h2  class="visually-hidden" class="title">Features</h2>
 <!--Liste Feature-->
     <ul class="features-list">
 <!--Liste Feature 1-->
