--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <section class="section-features">
     <div class="container container-features">
-    <h2  class="visually-hidden" class="title">Features</h2>
+    <h2  class="visually-hidden">Features</h2>
 <!--Liste Feature-->
     <ul class="features-list">
 <!--Liste Feature 1-->
@@ -209,7 +209,7 @@
 <footer class="footer">
     <div class="container container-footer">
 <!--Logo-->
-<a class="logo" href="./index.html">Web<span class="logo-footer-colored">Studio</span></a>
+<a class="logo logo-footer" href="./index.html">Web<span class="logo-footer-colored">Studio</span></a>
 
 <p class="footer-text">
     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
