--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <!--Section 3 Our Team-->
 
 <section class="section-team">
-<div class="container-team"> 
+<div class=" container container-team"> 
     <h2 class="team-title title">Our Team</h2>
 
     <ul class= "team-list">
