add index.html file

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 
     <section class="section-features">
     <div class="container container-features">
-    <h2  class="visually-hidden">Features</h2>
+        <div class="visually-hidden">
+    <h2>Features</h2>
+</div>
 <!--Liste Feature-->
     <ul class="features-list">
 <!--Liste Feature 1-->
