add index.html file

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 
     <section class="section-features">
     <div class="container container-features">
-        <div class="visually-hidden">
-    <h2>Features</h2>
-</div>
+    <h2 class="visually-hidden">Features</h2>
+
 <!--Liste Feature-->
     <ul class="features-list">
 <!--Liste Feature 1-->
